[gd_scene load_steps=2 format=3 uid="uid://cgwhsyw0mcr75"]

[ext_resource type="Script" uid="uid://mg5sb5q0ku41" path="res://Scripts/debug_menu.gd" id="1_1dfap"]

[node name="Debug Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_1dfap")

[node name="Panel" type="Panel" parent="."]
offset_right = 180.0
offset_bottom = 209.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 162.0
offset_bottom = 210.0

[node name="Load" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Show_data" type="Button" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "Show Data"

[node name="Negative_health" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "-20 Health"

[node name="Powerjab" type="CheckButton" parent="Panel/VBoxContainer"]
visible = false
layout_mode = 2
text = "PowerJab unlock"

[node name="ShieldBash" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "ShieldBsh unlock"

[node name="Data_panel" type="Panel" parent="."]
visible = false
offset_left = 1.0
offset_top = 210.0
offset_right = 183.0
offset_bottom = 521.0

[connection signal="pressed" from="Panel/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Show_data" to="." method="_on_half_health_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Negative_health" to="." method="_on_negative_health_pressed"]
[connection signal="toggled" from="Panel/VBoxContainer/Powerjab" to="." method="_on_powerjab_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/ShieldBash" to="." method="_on_shield_bash_toggled"]
